kube/app/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-frontend
  namespace: birdie
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: nodejs-frontend
