kube/app/frontend/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: birdie-app
  namespace: birdie
spec:
  # tls:
  # - hosts:
  #   - birdie.prck.me
  #   secretName: birdie-app-tls
  rules:
  - host: birdie.prck.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-frontend
            port:
              number: 80
